--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#181f2f;">
     <!-- Container wrapper -->
     <div class="container-fluid">
-  
+        <img class="img-fluid" src="/images/HS.png" alt="icon" height="90px" width="90px">
       <!-- Navbar brand -->
       <h1 style="color: white;">Hallycoins: <span id = "hallycoins"></span></h1> 
       <!-- Collapsible wrapper -->
@@ -54,9 +54,12 @@
   </nav>
   <!-- Navbar -->
     <div class=" ms-3 mt-3" >
-        <button class="btn btn-danger" onclick="duplax()">Dupla com X</button>
-        <button id = "dudu" class="btn btn-danger" onclick="dupladudu()" style="display: none;">Dupla com Dudu</button>
-    
+
+        <div id="duplas">
+            <button class="btn btn-danger" onclick="duplax()">Dupla com X</button>
+            <button id = "dudu" class="btn btn-danger" onclick="dupladudu()" style="display: none;">Dupla com Dudu</button>
+        </div>
+        
         <div class="d-flex ">
         <div class="d-flex-column mt-5 w-25 text-center">
             <button id = "btn1" class="btn btn-primary mb-2 w-75" onclick="compra1()" disabled>Comprar um Segurança (1000)</button>
@@ -76,6 +79,10 @@
             <canvas class="d-none d-md-block mb-2" id="mycanvas" width="750" height="500"></canvas>    
 
         <div class="d-flex-column overflow-auto border border-light ms-3 me-3 w-25 rounded-3 text-center" style="height: 500px;">
+            <div id="pobre" class="text-white d-flex-column">
+                <span>você ainda é pobre</span>
+                <img src="/images/maxmitai.gif"  width="150" height="150" alt="pobre">
+            </div>
             <img class="img-fluid" id = "breno" src="images/breno.png" alt="breno" style="display: none;">
             <h3 class="ms-2" id="guardei" style="display: none; color: white;"> guardei pra awp </h3>
             <img class="img-fluid" id = "assalto" src="images/assalto.png" alt="assalto" style="display: none;">
