--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     rel="stylesheet"
     />
 
-    <link rel="icon" href="/images/udyr.png">
+    <link rel="icon" href="/images/udyr.webP">
 
     <script
     type="text/javascript"
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#181f2f;">
     <!-- Container wrapper -->
     <div class="container-fluid">
-        <img class="img-fluid" src="/images/HS.png" alt="icon" height="90px" width="90px">
+        <img class="img-fluid" src="/images/HS.webP" alt="icon" height="90px" width="90px">
       <!-- Navbar brand -->
       <h1 style="color: white;">Hallycoins: <span id = "hallycoins"></span></h1> 
       <!-- Collapsible wrapper -->
@@ -83,14 +83,14 @@
                 <span>você ainda é pobre</span>
                 <img src="/images/maxmitai.gif"  width="150" height="150" alt="pobre">
             </div>
-            <img class="img-fluid" id = "breno" src="images/breno.png" alt="breno" style="display: none;">
+            <img class="img-fluid" id = "breno" src="images/breno.webP" alt="breno" style="display: none;">
             <h3 class="ms-2" id="guardei" style="display: none; color: white;"> guardei pra awp </h3>
-            <img class="img-fluid" id = "assalto" src="images/assalto.png" alt="assalto" style="display: none;">
-            <img class="img-fluid" id = "dono" src="images/dono.png" alt="dono" style="display: none;">
-            <img class="img-fluid" id = "dupla" src="images/dupla.png" alt="dupla" style="display: none;">
-            <img class="img-fluid" id = "jv" src="images/jv.png" alt="jv" style="display: none;">
-            <img class="img-fluid" id = "alce" src="images/alce.png" alt="alce" style="display: none;">
-            <img class="img-fluid" id = "gabrises" src="images/gabrises.png" alt="gabrises" style="display: none;">
+            <img class="img-fluid" id = "assalto" src="images/assalto.webP" alt="assalto" style="display: none;">
+            <img class="img-fluid" id = "dono" src="images/dono.webP" alt="dono" style="display: none;">
+            <img class="img-fluid" id = "dupla" src="images/dupla.webP" alt="dupla" style="display: none;">
+            <img class="img-fluid" id = "jv" src="images/jv.webP" alt="jv" style="display: none;">
+            <img class="img-fluid" id = "alce" src="images/alce.webP" alt="alce" style="display: none;">
+            <img class="img-fluid" id = "gabrises" src="images/gabrises.webP" alt="gabrises" style="display: none;">
 
         </div>
     </div>
