--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         
         <div class="d-flex ">
-        <div class="d-flex-column mt-5 w-25 text-center">
+        <div class="d-flex-column mt-5 w-25 text-start text-md-center">
             <button id = "btn1" class="btn btn-primary mb-2 w-75" onclick="compra1()" disabled>Comprar um Segurança (1000)</button>
             <button id = "btn2" class="btn btn-primary mb-2 w-75" onclick="compra2()" disabled>Comprar um Corno (10000)</button>
             <button id = "btn3" class="btn btn-primary mb-2 w-75" onclick="compra3()" disabled>Comprar um JV  (100000)</button>
@@ -78,7 +78,7 @@
 
             <canvas class="d-none d-md-block mb-2" id="mycanvas" width="750" height="500"></canvas>    
 
-        <div class="d-flex-column overflow-auto border border-light ms-3 me-3 w-25 rounded-3 text-center" style="height: 500px;">
+        <div id="contImages" class="d-flex-column overflow-auto border border-light ms-3 me-3 w-50-md-25 rounded-3 text-center" style="height: 500px;">
             <div id="pobre" class="text-white d-flex-column">
                 <span>você ainda é pobre</span>
                 <img src="/images/maxmitai.gif"  width="150" height="150" alt="pobre">
