--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <button id = "btn6" class="btn btn-primary mb-2 w-75" onclick="compra6()" disabled>O que isso faz?</button>
             <button id = "btn7" class="btn btn-primary mb-2 w-75" onclick="compra7()" disabled>Breno olha pra você</button>
             <div class="w-100">
-                <a class="btn btn-primary " style="background-color: #333333;" href="https://github.com/NovaDrake76/HallyCoin" role="button"><i class="fab fa-github fa-2x"></i></a>
-                <a class="btn btn-primary " style="background-color: #333333;" href="https://discord.com/channels/@me/838928356413800498" role="button"><i class="fab fa-discord fa-2x"></i></a>
+                <a class="btn btn-primary " target=”_blank” style="background-color: #333333;" href="https://github.com/NovaDrake76/HallyCoin" role="button"><i class="fab fa-github fa-2x"></i></a>
+                <a class="btn btn-primary " target=”_blank” style="background-color: #333333;" href="https://discord.com/channels/@me/838928356413800498" role="button"><i class="fab fa-discord fa-2x"></i></a>
             </div>
         </div>
         
